--- a/about.html
+++ b/about.html
@@ -14,17 +14,18 @@
             <a class="logo">TIMOFEJS</a>
             <nav class="nav_bar">
                 <ul class="nav_links">
-                    <li><a href="@">VK</a></li>
-                    <li><a href="@">SNAPCHAT</a></li>
+                    <li><a href="https://pnrtscr.com/cb9tpc">VK</a></li>
+                    <li><a href="https://github.com/timos09">GITHUB</a></li>
                     <li><a href="https://www.instagram.com/b3br1s/">INSTAGRAM</a></li>
-                    <li><a href="@">STEAM</a></li>
+                    <li><a href="https://steamcommunity.com/profiles/76561198336894392">STEAM</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="centre">
-            
-        </div>
     </header>
-    
+    <div class="about_me">
+        <strong>My website</strong>
+        <b>On this website you can find information about me.
+            On right top you can find me in social medias</b>
+    </div>
 </body>
 </html>
