--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@
     </header>
     <div class="about_me">
         <strong>My website</strong>
+    </div>
+    <div class="about_me2">
         <b>On this website you can find information about me.
             On right top you can find me in social medias</b>
     </div>
